# smartcar

./: .gitignore  .mcp.json  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.github/workflows/: s2-backend.yml
.omx/context/: backend-api-contract-worker-2-routes.md  backend-api-contract-worker-3-drift.md
.stability-probes/toolcall-rootcause-20260503/: aggregate.md  aggregate.py  baseline-request-source.json  hypotheses.md  probe.py
docs/: AEGIS.md  README.md  mcp.md
for-paper/: AGENTS.md
scripts/: llm-engine-health.sh  start-adapter.sh  start-analysis-agent.sh  start-backend.sh  start-build-agent.sh  start-container-gateway.sh  start-ecu-sim.sh  start-frontend.sh  start-knowledge-base.sh  start-llm-gateway.sh  start-sast-runner.sh  start.sh  stop.sh
services/agent-shared/: pyproject.toml
services/agent-shared/aegis_agent_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/agent-shared/agent_shared/: __init__.py  errors.py  observability.py  path_util.py
services/agent-shared/agent_shared/budget/: __init__.py  manager.py
services/agent-shared/agent_shared/llm/: caller.py  message_manager.py  prompt_builder.py  static_caller.py  token_counter.py  turn_summarizer.py
services/agent-shared/agent_shared/policy/: retry.py  termination.py
services/agent-shared/agent_shared/schemas/: agent.py  upstream.py
services/agent-shared/agent_shared/tools/: base.py  executor.py  failure_policy.py  hooks.py  registry.py  router_core.py
tools/: verify_lane_bootstrap.py
(+2643 files in other folders)
