[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-agent-shared"
version = "0.1.0"
description = "AEGIS S3 에이전트 공통 프레임 (LLM 통신, 도구 실행, 스키마)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[tool.setuptools.packages.find]
include = ["agent_shared*"]
